pinchStart event eingebaut
Change-Id: I91e344d55337f11b353ced626c9e533b3a4c12c9

--- a/css/mag42.css
+++ b/css/mag42.css
@@ -30,8 +30,8 @@
 	z-index: 1000;
 	top:0px; left:0px;
 	color: #ffffff;
-	/*background-color: #221122;*/
-	opacity: 0;
+	background-color: #fdfc84;
+	opacity: 0.3;
 }
 
 .pinchInfo
