- drag fix, pinching und dragging funktioniert jetzt gleichzeit - list style geaendert
Change-Id: I3904c7b51aebbcebc64667de33293c0265ce4ee9

--- a/css/mag42.css
+++ b/css/mag42.css
@@ -19,9 +19,11 @@
 {
 	color: #efefef;
 	background-repeat:no-repeat;
-	padding-left: 30px;
+	padding-left: 10px;
 	text-shadow: 0px 1px 0px #494949;
 	font-weight: bold;
+	border-width: 0px;
+	border-style: none;
 }
 
 .pinchLayer_enabled
