--- a/css/mag42.css
+++ b/css/mag42.css
@@ -15,6 +15,19 @@
 	height: 100%;
 }
 
+
+.closeBtn
+{
+	position: absolute;
+	top:0px;
+	right:0px;
+	width:22px;
+	height:22px;
+	background-image: url(../gfx/X.png);
+	background-repeat: no-repeat;
+	z-index: 905;
+}
+
 .list
 {
 	color: #efefef;
