--- a/css/mag42.css
+++ b/css/mag42.css
@@ -21,10 +21,11 @@
 	position: absolute;
 	top:0px;
 	right:0px;
-	width:22px;
-	height:22px;
+	width:30px;
+	height:30px;
 	background-image: url(../gfx/X.png);
 	background-repeat: no-repeat;
+	background-position: center;
 	z-index: 905;
 }
 
